src/main/java/com/example/property_management/error/exception/CannotDeleteUserException.java
package com.example.property_management.error.exception;

public class CannotDeleteUserException extends RuntimeException {
    public CannotDeleteUserException(String message) {
        super(message);
    }
}
